[tool.poetry]
name = "stable-baselines3"
version = "0.1.0"
description = ""
authors = ["sudo-Boris <boris.meinardus00@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.10.0"
tqdm = "^4.64.1"
pyglet = "1.5.27"
Box2D = "^2.3.10"
mujoco-py = "<2.2,>=2.1"
wandb = "^0.13.7"
tensorboard = "^2.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
